[package]
name = "mq-bridge-ibm-mq"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
mq-bridge = { version = "0.2" }
mqi = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "signal"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
schemars = { version = "1.2", optional = true }

[features]
schema = ["dep:schemars"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml_ng = "0.10"
once_cell = { version = "1.21" }
mq-bridge = { version = "0.2", features = ["test-utils"] }


[[bench]]
name = "performance_bench"
harness = false

[patch.crates-io]
mq-bridge = { path = "../mq-bridge" }
